--- a/theme.conf
+++ b/theme.conf
@@ -1,1 +1,87 @@
-./theme-pink.conf
+[Metadata]
+Name=Material-Color
+Version=0.1
+Author=hosxy
+Description=Material Color Theme
+ScaleWithDPI=True
+
+[InputPanel]
+# 字体
+Font=Sans 13
+# 非选中候选字颜色
+NormalColor=#000000
+# 选中候选字颜色
+HighlightColor=#ffffff
+# 
+Spacing=3
+
+[InputPanel/TextMargin]
+# 候选字对左边距
+Left=7
+# 候选字对右边距
+Right=10
+# 候选框向上边距
+Top=7
+# 候选框向下边距
+Bottom=7
+
+[InputPanel/Background]
+Image=panel.png
+
+[InputPanel/Background/Margin]
+Left=2
+Right=2
+Top=2
+Bottom=2
+
+[InputPanel/Highlight]
+Image=highlight.png
+
+[InputPanel/Highlight/Margin]
+# 高亮左边距
+Left=10
+# 高亮右边距
+Right=10
+# 高亮上边距
+Top=5
+# 高亮下边距
+Bottom=5
+
+[Menu/Background]
+Image=panel.png
+
+[Menu/Background/Margin]
+Left=2
+Right=2
+Top=2
+Bottom=2
+
+[Menu/ContentMargin]
+Left=2
+Right=2
+Top=2
+Bottom=2
+
+[Menu/Highlight]
+Image=highlight.png
+
+[Menu/Highlight/Margin]
+Left=5
+Right=5
+Top=5
+Bottom=5
+
+[Menu/Separator]
+Color=#c0c0c0
+
+[Menu/CheckBox]
+Image=radio.png
+
+[Menu/SubMenu]
+Image=arrow.png
+
+[Menu/TextMargin]
+Left=5
+Right=5
+Top=5
+Bottom=5
