--- a/theme.conf
+++ b/theme.conf
@@ -38,13 +38,13 @@ Bottom=2
 Image=highlight.png
 
 [InputPanel/Highlight/Margin]
-# 高亮左边距
+# 高亮区域左边距
 Left=10
-# 高亮右边距
+# 高亮区域右边距
 Right=10
-# 高亮上边距
+# 高亮区域上边距
 Top=5
-# 高亮下边距
+# 高亮区域下边距
 Bottom=5
 
 [Menu/Background]
