update README about preedit blacklists

--- a/theme.conf
+++ b/theme.conf
@@ -11,19 +11,23 @@ Font=Sans 13
 # 非选中候选字颜色
 NormalColor=#000000
 # 选中候选字颜色
-HighlightColor=#ffffff
+HighlightCandidateColor=#ffffff
+# 高亮前景颜色(输入字符颜色)
+HighlightColor=#37474f
+# 输入字符背景颜色
+HighlightBackgroundColor=#ffffff
 # 
 Spacing=3
 
 [InputPanel/TextMargin]
 # 候选字对左边距
-Left=7
+Left=10
 # 候选字对右边距
 Right=10
-# 候选框向上边距
-Top=7
-# 候选框向下边距
-Bottom=7
+# 候选字向上边距
+Top=6
+# 候选字向下边距
+Bottom=6
 
 [InputPanel/Background]
 Image=panel.png
@@ -43,9 +47,9 @@ Left=10
 # 高亮区域右边距
 Right=10
 # 高亮区域上边距
-Top=5
+Top=7
 # 高亮区域下边距
-Bottom=5
+Bottom=7
 
 [Menu/Background]
 Image=panel.png
