update README and change tray menu background

--- a/theme.conf
+++ b/theme.conf
@@ -52,7 +52,7 @@ Top=7
 Bottom=7
 
 [Menu/Background]
-Image=panel.png
+Image=panel-origin.png
 
 [Menu/Background/Margin]
 Left=2
@@ -70,8 +70,8 @@ Bottom=2
 Image=highlight.png
 
 [Menu/Highlight/Margin]
-Left=5
-Right=5
+Left=10
+Right=10
 Top=5
 Bottom=5
 
