使用十六进制颜色替代图片

--- a/theme-orgin.conf
+++ b/theme-orgin.conf
@@ -1,29 +1,33 @@
 [Metadata]
-Name[ca]=Per defecte
-Name[da]=Standard
-Name[de]=Standard
-Name[ja]=既定
-Name[ko]=기본값
-Name[ru]=По умолчанию
-Name[zh_CN]=默认
-Name[zh_TW]=預設
-Name=Default
-Version=1
-Author=Fcitx
-Description=Default Theme
+Name=Material-Color
+Version=0.1
+Author=hosxy
+Description=Material Color Theme
 ScaleWithDPI=True
 
 [InputPanel]
-Font=Sans 10
+# 字体
+Font=Sans 13
+# 非选中候选字颜色
 NormalColor=#000000
-HighlightColor=#ffffff
+# 选中候选字颜色
+HighlightCandidateColor=#ffffff
+# 高亮前景颜色(输入字符颜色)
+HighlightColor=#37474f
+# 输入字符背景颜色
+HighlightBackgroundColor=#ffffff
+# 
 Spacing=3
 
 [InputPanel/TextMargin]
-Left=7
-Right=7
-Top=7
-Bottom=7
+# 候选字对左边距
+Left=10
+# 候选字对右边距
+Right=10
+# 候选字向上边距
+Top=6
+# 候选字向下边距
+Bottom=6
 
 [InputPanel/Background]
 Image=panel.png
@@ -38,13 +42,17 @@ Bottom=2
 Image=highlight.png
 
 [InputPanel/Highlight/Margin]
-Left=5
-Right=5
-Top=5
-Bottom=5
+# 高亮区域左边距
+Left=10
+# 高亮区域右边距
+Right=10
+# 高亮区域上边距
+Top=7
+# 高亮区域下边距
+Bottom=7
 
 [Menu/Background]
-Image=panel.png
+Image=panel-origin.png
 
 [Menu/Background/Margin]
 Left=2
@@ -62,8 +70,8 @@ Bottom=2
 Image=highlight.png
 
 [Menu/Highlight/Margin]
-Left=5
-Right=5
+Left=10
+Right=10
 Top=5
 Bottom=5
 
