--- a/theme-pink.conf
+++ b/theme-pink.conf
@@ -39,7 +39,6 @@ Top=2
 Bottom=2
 
 [InputPanel/Highlight]
-Image=
 Color=#E91E63
 
 [InputPanel/Highlight/Margin]
@@ -53,7 +52,7 @@ Top=7
 Bottom=7
 
 [Menu/Background]
-Image=panel-origin.png
+Color=#ffffff
 
 [Menu/Background/Margin]
 Left=2
