--- a/theme-sakuraPink.conf
+++ b/theme-sakuraPink.conf
@@ -30,7 +30,7 @@ Top=6
 Bottom=6
 
 [InputPanel/Background]
-Image=panel-sakura.png
+Image=panel-sakuraPink.png
 
 [InputPanel/Background/Margin]
 Left=2
