候选框背景不再使用图片，使用fcitx5新特性自行绘制

--- a/theme-black.conf
+++ b/theme-black.conf
@@ -30,7 +30,9 @@ Top=6
 Bottom=6
 不出口
 [InputPanel/Background]
-Image=panel-black.png
+Color=#ffffff
+BorderColor=#000000
+BorderWidth=2
 
 [InputPanel/Background/Margin]
 Left=2
