--- a/theme-blue.conf
+++ b/theme-blue.conf
@@ -30,7 +30,9 @@ Top=6
 Bottom=6
 
 [InputPanel/Background]
-Image=panel-blue.png
+Color=#ffffff
+BorderColor=#2196F3
+BorderWidth=2
 
 [InputPanel/Background/Margin]
 Left=2
