--- a/theme-brown.conf
+++ b/theme-brown.conf
@@ -30,7 +30,9 @@ Top=6
 Bottom=6
 
 [InputPanel/Background]
-Image=panel-brown.png
+Color=#ffffff
+BorderColor=#795548
+BorderWidth=2
 
 [InputPanel/Background/Margin]
 Left=2
