--- a/theme-indigo.conf
+++ b/theme-indigo.conf
@@ -30,7 +30,9 @@ Top=6
 Bottom=6
 
 [InputPanel/Background]
-Image=panel-indigo.png
+Color=#ffffff
+BorderColor=#3F51B5
+BorderWidth=2
 
 [InputPanel/Background/Margin]
 Left=2
