--- a/theme-orange.conf
+++ b/theme-orange.conf
@@ -30,7 +30,9 @@ Top=6
 Bottom=6
 
 [InputPanel/Background]
-Image=panel-orange.png
+Color=#ffffff
+BorderColor=#FF8C00
+BorderWidth=2
 
 [InputPanel/Background/Margin]
 Left=2
