--- a/theme-red.conf
+++ b/theme-red.conf
@@ -30,7 +30,9 @@ Top=6
 Bottom=6
 
 [InputPanel/Background]
-Image=panel-red.png
+Color=#ffffff
+BorderColor=#F44336
+BorderWidth=2
 
 [InputPanel/Background/Margin]
 Left=2
