--- a/theme-teal.conf
+++ b/theme-teal.conf
@@ -30,7 +30,9 @@ Top=6
 Bottom=6
 
 [InputPanel/Background]
-Image=panel-teal.png
+Color=#ffffff
+BorderColor=#009688
+BorderWidth=2
 
 [InputPanel/Background/Margin]
 Left=2
