--- a/theme-pink.conf
+++ b/theme-pink.conf
@@ -30,7 +30,9 @@ Top=6
 Bottom=6
 
 [InputPanel/Background]
-Image=panel-pink.png
+Color=#ffffff
+BorderColor=#E91E63
+BorderWidth=2
 
 [InputPanel/Background/Margin]
 Left=2
